--- a/front/styles.css
+++ b/front/styles.css
@@ -15,19 +15,56 @@ html {
 }
 
 body {
-  background-color: #482B28;
+  background-color: #FFFFFF; 
   font-family: "Play", sans-serif;
+  width: 100vw;
+  height: 100vh;
+
+  display: flex;
+  flex-direction: column;
+  row-gap: 24px;
+  justify-content: center;
+  align-items: center;
 }
 
-img {
-  border: 4px solid black;
+h1 {
+  color: #482B28;
+  font-size: 58px;
 }
 
-.hidden {
-  display: none;
+.menu-container {
+  display: flex;
+  flex-direction: column;
 }
 
-.title {
-  font-size: 28px;
-  font-weight: bold;
+.menu-container-btn {
+  background: url('./assets/wooden-btn.webp');
+  height: 108px;
+  width: 285px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transition: transform .1s ease-in;
+
+  &:hover {
+    transform: translateY(2px);
+  }
+
+  &:active {
+    transform: translateY(0px);
+  }
+
+  h3 {
+    font-size: 42px;
+    color: #FFF;
+  }
+}
+
+#help-modal {
+  margin: 20% auto;
+  background-color: #FFF;
+  width: 450px;
+  height: 400px;
+  border: 2px solid red;
 }
